add student update function
