# routes/student.js
@@ -6,5 +6,6 @@ const studentController = require('../controllers/student');
 router.get('/', studentController.getAllStudents);
 router.get('/:studentid', studentController.getStudent);
 router.post('/', studentController.createNewStudent);
+router.put('/:studentid', studentController.updateStudentById);
 
 module.exports = router;
